test/domains/neth/enumToInt.good
enumToInt.chpl:2: error: Ranges defined using bounds of type '2*e..2*int(64)' are not currently supported
