test/domains/neth/enumToInt.chpl
enum e {Value1, Value2, Value3};
var r = (e.Value1,e.Value2)..(0,0);
